clusters/homelab/apps/microbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: microbin
spec:
  selector:
    app: microbin
  ports:
    - port: 80
      targetPort: 8080
